Bug 751396 - Fire slice callbacks only for "outer" GCs. r=billm