js/src/jscntxt.h
@@ -594,12 +594,6 @@ struct JSRuntime : js::RuntimeFriendFields
     js::Vector<SavedGCRoot, 0, js::SystemAllocPolicy> gcSavedRoots;
 #endif
 
-    /*
-     * We can pack these flags as only the GC thread writes to them. Atomic
-     * updates to packed bytes are not guaranteed, so stores issued by one
-     * thread may be lost due to unsynchronized read-modify-write cycles on
-     * other threads.
-     */
     bool                gcPoke;
     bool                gcRunning;
 
